Fixes gap and aligns

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,7 +1,7 @@
 @utility nav-* {
     @layer components {
         &:is(.nav-list) {
-            @apply flex items-center gap-2 w-full;
+            @apply flex w-full gap-2;
         }
     }
 }
@@ -12,7 +12,7 @@
   @layer components {
     @apply [justify-self:--value(--x-*)];
     & > :where(.nav-list) {
-      @apply [justify-content:--value(--x-*)] flex-row;
+      @apply [justify-content:--value(--x-*)] flex-row gap-x-2;
     }
   }
 }
@@ -21,7 +21,7 @@
     @layer components {
         @apply [justify-self:--value(--x-*)];
         & > :where(.nav-list) {
-            @apply [justify-content:--value(--y-*)] flex-col;
+            @apply [justify-content:--value(--y-*)] flex-col items-center gap-y-1;
         }
     }
 }
